# tdms-sync-checker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP_COMMANDS.txt  LICENSE  README.md  SECURITY.md  build_exe.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.bat  tdms_sync_checker_gui.py
.github/workflows/: python-tests.yml  tests.yml
docs/: confidentiality_statement.md  engineering_diagnostics.md  github_release_notes_v0.1.0.md  method_notes.md  portfolio_summary.md  reviewer_guide.md  synthetic_tdms_reference_summary.md  validation_scope.md
examples/: create_synthetic_tdms.py  run_synthetic_example.py  sample_output_description.md
scripts/: optional_tdms_plot_maker.py  run_engineering_diagnostics.py  tdms_sync_checker_single_file_spyder.py
src/tdms_sync_checker/: __init__.py  cli.py  core.py  diagnostic_plots.py  diagnostics.py  gui.py
tests/: README.md  conftest.py  test_activity_trim.py  test_core.py  test_diagnostics.py  test_imports_and_cli.py  test_pipeline_integration.py  test_split_file_continuity.py  test_timing_checks.py
